@@ -24,6 +24,7 @@ K 5684	add MimeMultipart(String subtype, BodyPart... bps) constructor
 K 5686	ParameterList needs to support use by IMAP
 K 5687	ContentType.toString & ContentDisposition.toString shouldn't return null
 K 5689	add Transport.send(msg, username, password) method
+K 5690	add MimeMessage.setFrom(String) method
 
 
 		  CHANGES IN THE 1.4.6 RELEASE
